# research-digest

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
launchd/: com.research-digest.daily.plist
src/research_digest/: __init__.py  cli.py  cluster.py  config.py  db.py  deepread.py  deliver.py  embed.py  feedback.py  rank.py  render.py  summarize.py
