[project]
name = "research-digest"
version = "0.1.0"
description = "Daily morning digest of top-N arxiv papers ranked by arxiv-graph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26",
    "pypdf>=4.0",
]

[project.scripts]
research-digest = "research_digest.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_digest"]
